examples/hello-world/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
