examples/hello-world/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: hello-world
  annotations:
    kubernetes.io/ingress.class: "nginx" # Required

spec:
  rules:
    - host: foo.bar # Your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
